# sca_pll

./: .gitignore  LICENSE  Makefile  README.md  chargepump.cpp  chargepump.h  config  config.h  divider.cpp  divider.h  main.cpp  options.json  pfdetector.cpp  pfdetector.h  vcoscillator.cpp  vcoscillator.h
clion/: CMakeLists.txt
configs/: 2450MHz_45deg_2nd_100n_leak.json  2450MHz_45deg_2nd_50n_leak.json  2450MHz_45deg_3rd_100n_leak.json  2450MHz_45deg_3rd_50n_leak.json  options_2450MHz_45deg_2nd.json  options_2450MHz_45deg_3rd.json  options_2450MHz_60deg_2nd.json  options_2450MHz_60deg_3rd.json
src/: chargepump.cpp  chargepump.h  config.h  controlm.cpp  controlm.h  delay.cpp  delay.h  divider.cpp  divider.h  loopfilter.cpp  loopfilter.h  main.cpp  pfdetector.cpp  pfdetector.h  rfdelay.cpp  rfdelay.h  sc_delay.cpp  sc_delay.h  sc_lfilter.cpp  sc_lfilter.h  sc_pfdetector.cpp  sc_pfdetector.h  sc_pll.cpp  sc_pll.h  sca_tdf_chargepump.cpp  sca_tdf_chargepump.h  sca_tdf_divider.cpp  sca_tdf_divider.h  sca_tdf_vcoscillator.cpp  sca_tdf_vcoscillator.h  vcoscillator.cpp  vcoscillator.h
vstd/: pll.sln  pll.vcxproj  pll.vcxproj.filters
work/: options.json
